<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="center_horizontal"

    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />



    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email_id"></EditText>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_marginLeft="80dp"

            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="PASSWORD"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_marginTop="20dp"
        android:background="#fff211"

        android:clickable="true"
        android:text="@string/login"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/tvInfo"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:textAlignment="center"
        android:textStyle="bold"

        android:text="@string/number_of_incorrect_attempts"
        android:textColor="#FF0000" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:text="@string/forgot_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered_yet" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"

            android:clickable="true"
            android:text="@string/REGISTER"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>